--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
             <div class="progress" id="SQL">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info move" style="width:34%; animation-delay:0.7s;" ></div>
             </div>
+            <h5>My JSON
+            </h5>
+            <div class="progress" id="SQL">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info move" style="width:40%; animation-delay:0.7s;" ></div>
+            </div>
         </div>
         <div class="container my-5" id="certificates" >
             <pre> </pre>
@@ -126,6 +131,14 @@
                             <td style="font-size:large">Data Structures and Algorithms using Java</td>
                             <td><a href="https://drive.google.com/file/d/1csoR9Rfogjq1OtaQKo9LR6ceoDYmSIOn/view?usp=drivesdk" target="_blank"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-download"></i> Download</button></a></td>
                         </tr>
+                        <tr >
+                            <td style="font-size:large">Web Development(Basic)</td>
+                            <td><a href="https://drive.google.com/file/d/1G_jx4YpFvRH0oXnTcYID9afNJS8eRQrQ/view?usp=drivesdk " target="_blank"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-download"></i> Download</button></a></td>
+                        </tr>
+                         <tr >
+                            <td style="font-size:large">Java Script</td>
+                            <td><a href="https://drive.google.com/file/d/1SmeKaCMhhimTMcESJNA7Qg_dq6m9rmOX/view?usp=drivesdk " target="_blank"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-download"></i> Download</button></a></td>
+                        </tr>
                     </table>
           
         </div>
@@ -136,11 +149,23 @@
                 <table class="table table-borderless">
                     <tr>
                         <td style="font-size:large">Calculator and unit converters</td>
-                        <td><a href="https://devipriya8736.github.io/Calculator-and-unit-converters/c1.htm" target="_blank"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></a></td>
+                        <td><a href="https://calculator-and-unit-converters.devipriya.co/" target="_blank"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></a></td>
                     </tr>
                     <tr>
                         <td style="font-size:large">Memory Game</td>
-                        <td><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
+                        <td><a href="http://memorygame.devipriya.co/" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
+                    </tr>
+                     <tr>
+                        <td style="font-size:large">College Khog</td>
+                        <td><a href="https://college-khoj.devipriya.co/" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
+                    </tr>
+                    <tr>
+                        <td style="font-size:large">Weather</td>
+                        <td><a href="https://weather.devipriya.co/" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
+                    </tr>
+                    <tr>
+                        <td style="font-size:large">Library Management System</td>
+                        <td><a href="https://github.com/devipriya8736/Library-Management-System" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
                     </tr>
                 </table>            
         </div>
