--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="progress" id="SQL">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info move" style="width:34%; animation-delay:0.7s;" ></div>
             </div>
-            <h5>My JSON
+            <h5>JSON
             </h5>
             <div class="progress" id="SQL">
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-info move" style="width:40%; animation-delay:0.7s;" ></div>
