--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <td><a href="http://memorygame.devipriya.co/" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
                     </tr>
                      <tr>
-                        <td style="font-size:large">College Khog</td>
+                        <td style="font-size:large">College Khoj</td>
                         <td><a href="https://college-khoj.devipriya.co/" target="_blank"><button class="btn bg-primary btn-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-eye"></i> View</button></td>
                     </tr>
                     <tr>
