--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="mailto:devipriya3442@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="font-size: larger; margin-right:15px; background-color: var(--background-color); color:var(--color)"></i></a>
                     <a href="https://github.com/devipriya8736" target="_blank"><i class="fa-brands fa-github" style="font-size: larger; background-color: var(--background-color); color:var(--color)"></i></a>
                     <br><br>
-                    <a href="https://drive.google.com/file/d/1nDAPGWy9Jap44xzwbnkgeIx2224FNR00/view?usp=drivesdk" target="_blank" id="dwld"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-download"></i> Download Resume</button></a>
+                    <a href="https://drive.google.com/file/d/1kN0l1dUWLTG2C21H-ktAcnt7EfIuzMPg/view?usp=sharing" target="_blank" id="dwld"><button class="btn btn-primary bg-primary" style="background-color: var(--background-color); color:var(--color)"><i class="fa-solid fa-download"></i> Download Resume</button></a>
                 </div>
             </div>
         </div>
